--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
 # Backend API URL для продакшна
-API_URL=https://your-server-url.onrender.com
+API_URL=https://coin-bank-server.onrender.com
 
 # WebSocket URL для продакшна
-WS_URL=wss://your-server-url.onrender.com
+WS_URL=wss://coin-bank-server.onrender.com
