--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
 # Backend API URL для разработки
-API_URL=http://localhost:3000
+WEBPACK_API_URL=http://localhost:3000
 
 # WebSocket URL для разработки
-WS_URL=ws://localhost:3000
+WEBPACK_WS_URL=ws://localhost:3000
