--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
 # Backend API URL для продакшна
-API_URL=https://coin-bank-server.onrender.com
+WEBPACK_API_URL=https://coin-bank-server.onrender.com
 
 # WebSocket URL для продакшна
-WS_URL=wss://coin-bank-server.onrender.com
+WEBPACK_WS_URL=wss://coin-bank-server.onrender.com
